tests/invalid/simple/ProcessAccess_CompileFail_1.whiley
define (int mode, ? rest) as etype
define process etype as Ptype

int Ptype::get():
    this->op = 1
    return this->mode

void System::main([string] args):
    print "OK"
